# bbm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ux.epgz
app/: CMakeLists.txt  bbm-ui.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_availablebbchildren.cpp  model_availablebbchildren.h  model_bblist.cpp  model_bblist.h  model_detail.cpp  model_detail.h  model_detail_usedby.cpp  model_detail_usedby.h  model_detail_uses.cpp  model_detail_uses.h  model_projectbblist.cpp  model_projectbblist.h  model_projectlist.cpp  model_projectlist.h  model_summary.cpp  model_summary.h
src/: CMakeLists.txt  QtWidgets.pro  addbuildingblockdlg.cpp  addbuildingblockdlg.h  addprojectdlg.cpp  addprojectdlg.h  addprojectdlg.ui  bbm.pro  buildingblocktreemodel.cpp  ctn_view.hpp  datamodel.cpp  datamodel.h  datamodel_file.cpp  datamodel_file.h  dbitemmodel.cpp  dbitemmodel.h  dlg_bbmanager.cpp  dlg_bbmanager.h  dlg_bbmanager.ui  dlg_buildingblock.cpp  dlg_buildingblock.h  dlg_buildingblock.ui  dlg_project.cpp  dlg_project.h  dlg_project.ui  dlg_projectbb.cpp  dlg_projectbb.h  dlg_projectbb.ui  json_utils.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_availablebbchildren.cpp  model_availablebbchildren.h  model_bblist.cpp  model_bblist.h  model_bbtree.cpp  model_bbtree.h  model_detail.cpp  model_detail.h  (+14 more)
test/: CMakeLists.txt  test-bbm.cpp  test-bbm.h  test.json
